--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
         <label class="form-label">priority</label>
        
         <form id="event-config-form">
-          <select class="form-select ">
+          <select class="form-select" id="color-input">
             <option class="bg-primary-subtle text-primary-emphasis">primary</option>
             <option class="bg-secondary-subtle text-secondary-emphasis">secondary</option>
             <option class="bg-warning-subtle text-warning-emphasis">warning</option>
