--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
 
             
           </select>
-
-
+          <label class="mt-4 form-label">notes</label>
+<textarea id="note-text" class="form-control"></textarea>
         </form>
 
 
