--- a/index.html
+++ b/index.html
@@ -143,5 +143,6 @@
 </script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.10.0/localforage.min.js" integrity="sha512-+BMamP0e7wn39JGL8nKAZ3yAQT2dL5oaXWr4ZYlTGkKOaoXM/Yj7c4oy50Ngz5yoUutAG17flueD4F6QpTlPng==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
     <script  src="main.js"></script>
+    <link rel="manifest" href="manifest.json" />
 </body>
 </html>
