--- a/index.html
+++ b/index.html
@@ -153,16 +153,19 @@
           </div>
  </div>
 
- <div class="d-noe" >
+ <div id='tasks-section' class="d-noe" >
 <h5 id="task-heading"><u>tasks</u></h5>
 
 
 <div id="task-list"></div>
 
 
-      <div class="input-group d-none" id="task-input">
-        <input class="form-control form-control-sm" placeholder="enter task name to be added to event" type="text">
+      <div class="m-2 d-none" id="task-input">
+        <form class="input-group" id="taskform">
+        <input class="form-control form-control-sm" id="taskinp" placeholder="enter task name to be added to event" type="text">
         <button class="btn btn-secondary btn-sm" id="task-add"><i class="bi bi-plus"></i></button>
+
+        </form>
     </div>
 
     
@@ -201,7 +204,7 @@
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/14.1.3/marked.min.js" integrity="sha512-kZ9BCD8vqCw2vJ1XG3EVZN5M5aRNxxMK3+uYuZPWc+TtW2Z1zSgmFlTIVHYHaWH0bH2lp2dUlB/1+M1h+lvfeg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.10.0/localforage.min.js" integrity="sha512-+BMamP0e7wn39JGL8nKAZ3yAQT2dL5oaXWr4ZYlTGkKOaoXM/Yj7c4oy50Ngz5yoUutAG17flueD4F6QpTlPng==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
- <script  src="main.js"></script>
+ <script  type="module" src="main.js"></script>
   
 </body>
 </html>
