--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link rel="manifest" href="manifest.json">
 
    </head>
-<body data-bs-theme="">
+<body data-bs-theme="light">
  
 
  <div class="container" id="calendar-section">
