added splash screens

--- a/index.html
+++ b/index.html
@@ -16,6 +16,11 @@
 <link rel="favicon" href="'icons/iosicon.png"/>
     <link rel="manifest" href="manifest.json">
 
+
+<meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
+<!-- For light mode -->
+<meta name="theme-color" content="#ffffff" media="(prefers-color-scheme: light)">
+
    </head>
 <body data-bs-theme="light">
  
