--- a/index.html
+++ b/index.html
@@ -114,21 +114,21 @@
            <div class="btn-group"> 
 
 <input type="checkbox" class="btn-check" id="taginpcheck" autocomplete="off">
-<label for="taginpcheck" id="tag-btn" class="btn btn-secondary"><i class="bi bi-tags-fill"></i></label>    
+<label for="taginpcheck" id="tag-btn" class="btn btn-primary"><i class="bi bi-tags-fill"></i></label>    
 
  <input type="checkbox" class="btn-check" id="locinpcheck" autocomplete="off">
-<label for="locinpcheck" id="loc-btn" class="btn btn-secondary"><i class="bi bi-geo-alt-fill"></i></label>  
+<label for="locinpcheck" id="loc-btn" class="btn btn-primary"><i class="bi bi-geo-alt-fill"></i></label>  
 
 <input type="checkbox" class="btn-check" id="taskinpcheck" autocomplete="off">
-<label for="taskinpcheck" id="task-btn" class="btn btn-secondary"><i class="bi bi-ui-checks"></i></label>
+<label for="taskinpcheck" id="task-btn" class="btn btn-primary"><i class="bi bi-ui-checks"></i></label>
 
 <input type="checkbox" class="btn-check" id="eventinpcheck" autocomplete="off">
-<label for="eventinpcheck" class="btn btn-secondary" id="edit-btn"><i class="bi bi-pencil-square"></i></label>
+<label for="eventinpcheck" class="btn btn-primary" id="edit-btn"><i class="bi bi-pencil-square"></i></label>
           </div>
  </div>
 
  <div id='tasks-section' class="d-noe" >
-<h5 id="task-heading"><u>tasks</u></h5>
+
 
 
 <div id="task-list"></div>
@@ -136,8 +136,8 @@
 
       <div class="m-2 d-none" id="task-input">
         <form class="input-group" id="taskform">
-        <input class="form-control form-control-sm" id="taskinp" placeholder="enter task name to be added to event" type="text">
-        <button class="btn btn-secondary btn-sm" id="task-add"><i class="bi bi-plus"></i></button>
+        <input class="form-control form-control-md" id="taskinp" placeholder="enter task name to be added to event" type="text">
+        <button class="btn btn-primary btn-md" id="task-add"><i class="bi bi-plus"></i></button>
 
         </form>
     </div>
@@ -159,6 +159,7 @@
 
       </div>
     </div>
+
 
 
     
