--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <h3 id="year-display" class="py-2 pb-0"></h3>
             <button class="btn btn-primary round-btn my-3" id="myday-btn"><i class="bi bi-gear"></i></button>
             </div>
-            <div class="pt-5 pt-0 d-flex w-100 justify-content-between align-items-center"> 
+            <div class="py-5 pt-0 d-flex w-100 justify-content-between align-items-center"> 
             <h1 id="month-display"></h1>
             <div class="d-flex flex-column">
                 <button class="btn" id="calendar-up">
@@ -54,7 +54,7 @@
               </div>
             </div>
             </section>
-            <table class="table mt-5" id="calendar-table">
+            <table class="table" id="calendar-table">
                 <thead>
                   <tr>
                       <th class="text-danger">sun</th>
