padding fixed gross added

--- a/index.html
+++ b/index.html
@@ -229,8 +229,8 @@
 <nav class="nav nav-pills flex-column flex-sm-row">
   <a class="flex-sm-fill active text-sm-center nav-link  tab-chooser" data-tab="expense" href="#">Expense Overview</a>
   <a class="flex-sm-fill text-sm-center nav-link tab-chooser" href="#" data-tab="income">Income Overview</a>
+  <a class="flex-sm-fill text-sm-center nav-link  tab-chooser" data-tab='gross' >Wallets and Gross Overview</a>
   <a class="flex-sm-fill text-sm-center nav-link" href="#">Habbit Overview</a>
-  <a class="flex-sm-fill text-sm-center nav-link disabled" aria-disabled="true">Wallets and Gross Overview</a>
 </nav>
 <section id="expense-page" class="tab-children" tab-name="expense">
 
@@ -270,7 +270,10 @@
 
 
 </section>
+<section class="tab-children" tab-name="gross">
+  <h1 id="total-gross"></h1>
 
+</section>
 
 
 </div>
