added date ranges partially working and cool

--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@
           <div class="d-flex flex-column">
             <h4 class="offcanvas-title" id="event-title">Event details</h4>
             <span class="offcanvas-subtitle text-secondary-emphasis" id="event-date"></span>
+            <span><input type="isodate" class="scary-ghost-input text-secondary-emphasis" placeholder="endDate" id="endDateInp" ></span>
             </div>
             <div class="btn-group">
               <button class="btn dropdown-toggle" for="drop">
