--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.10.0/localforage.min.js" integrity="sha512-+BMamP0e7wn39JGL8nKAZ3yAQT2dL5oaXWr4ZYlTGkKOaoXM/Yj7c4oy50Ngz5yoUutAG17flueD4F6QpTlPng==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 <script  type="module" src="main.js"></script>
  <script type="module" src="moneyManger.js"></script>
- 
+ <link href="./style.css" rel="stylesheet"/>
   
 </body>
 </html>
