--- a/index.html
+++ b/index.html
@@ -34,8 +34,7 @@
       l.href='https://cdn.jsdelivr.net/npm/bootswatch@5.3.3/dist/'+themename+'/bootstrap.min.css'
       document.head.appendChild(l)
 
-      document.head.innerHTML+='<link href="./style.css" rel="stylesheet"/>'  
-  </script>
+ </script>
 
  <div class="container " id="calendar-section">
   
@@ -43,7 +42,7 @@
           <div id="calendar-main" class="col-lg-9">
           <div class="py-5 pt-0 d-flex w-100 justify-content-between align-items-center"> 
             <h3 id="year-display" class="py-2 pb-0"></h3>
-            <div class="btn-group">
+            <div class="bn-group">
               <button class="btn btn-primary dropdowntoggle round-btn my-3" id="myday-btn" for="settings" ><i class="bi bi-gear"></i></button>
                 <ul id="settings" class="dropdown-menu dropdown-start">
                   <li><a class="dropdown-item" href="#"  id="dark-theme-btn">theme</a></li>
