--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
             </div>
             <div class="py-5 pt-0 d-flex w-100 justify-content-between align-items-center"> 
             <h1 id="month-display"></h1>
-            <div class="d-flex flex-column">
+            <div class="d-flex gap-1 flex-column">
                 <button class="btn" id="calendar-up">
                     <i class="bi bi-chevron-up"></i>
                 </button>
@@ -139,7 +139,7 @@
       <div class="offcanvas-header d-flex align-items-center justify-content-between">
         <div class="d-flex ">
           <div class="d-flex flex-column">
-            <h4 class="offcanvas-title" id="event-title">Event details</h4>
+            <h4 class="offcanvas-title" id="event-title" contenteditable="true">Event details</h4>
             <span class="offcanvas-subtitle text-secondary-emphasis" ><input type="isodate" class="scary-ghost-input text-secondary-emphasis" placeholder="startDate" id="startDateInp" ></span>
             <span><input type="isodate" class="scary-ghost-input text-secondary-emphasis" placeholder="endDate" id="endDateInp" ></span>
             </div>
