lots of imporvements

--- a/index.html
+++ b/index.html
@@ -54,9 +54,12 @@
             <div class="bn-group">
               <button class="btn btn-primary dropdowntoggle round-btn my-3" id="myday-btn" for="settings" ><i class="bi bi-gear"></i></button>
                 <ul id="settings" class="dropdown-menu dropdown-start">
-                  <li><a class="dropdown-item" href="#"  id="dark-theme-btn">theme</a></li>
-                  <li><a class="dropdown-item" href="#"  id="theme-btn">flavor</a></li>
-                  <li><a class="dropdown-item" href="#"  id="curr-inp">currency : <input type="text" style='width:1rem;' class="scary-ghost-input"></a></li>
+                  <li><a class="dropdown-item" href="#"  id="dark-theme-btn">Theme</a></li>
+                  <li><a class="dropdown-item" href="#"  id="theme-btn">Flavor</a></li>
+                  <li><a class="dropdown-item" href="#"  id="curr-inp">Currency : <input type="text" style='width:1rem;' class="scary-ghost-input"></a></li>
+                  <li><a class="dropdown-item" href='#' id='import-button'>Import data : <input type='file' accept=".ics" name="fileics"  class='form-control' id="ics-select" style="width:rem"/> </a></li>
+                  <!-- <li><a class="dropdown-item" href='#' id='export-button'>Export data</a></li> -->
+                  
 
 
 
