--- a/index.html
+++ b/index.html
@@ -54,8 +54,13 @@
             <h3 id="year-display" class="py-2 pb-0"></h3>
             <div class="d-flex gap-2 ">
               <button class="btn btn-ghost  round-btn my-3" id="search-btn"><i class="bi bi-search"></i></button>
-              <section class="search-wrapper d-none">
+              <section class="search-wrapper d-none" id="search-wrap">
+                <div class="d-flex btn-group">
+
+                <button class="btn btn-secondary" id="exit-search" >exit</button>
                 <input class="form-control" id="ev-search-inp" placeholder="search your events"/>
+
+                </div>
                 <ul class="mt-3 list-group" id="ev-result-display">
 
                 </ul>
@@ -71,7 +76,7 @@
                   <ul class="dropdown-menu dropdown-end " id="data-more">
                     <li><a class="dropdown-item" href='#' id='import-button'>Import data : <input type='file' accept=".ics" name="fileics"  class='form-control' id="ics-select" style="width:rem"/> </a></li>
                   <li><a class="dropdown-item" href='#' id='export-button'>Export data</a></li>
-                    <li><a class="dropdown-item" href="#" id="load-backup">load from backup <input type='file' accept=".json" name="fileics"  class='form-control' id="backup-select" style="width:rem"/></a></li>
+                    <li><a class="dropdown-item" href="#" id="load-backup">load from backup</a></li>
                     <li><a class="dropdown-item" href="#" id="backup">backup data</a></li>
                   </ul>
 
@@ -122,7 +127,6 @@
               </table>
               </div>
 
-
               <div class="col-lg-3 border-left-only">
                 <div class="mt-4 ">
                     <div class="w-full align-items-center d-flex" style="justify-content:space-between;width: 100%;">
@@ -170,7 +174,7 @@
               <ul class="dropdown-menu" id="drop">
                 <li><a class="dropdown-item" href="#" id="duplicate-btn">Duplicate event</a></li>
                 <li><a class="dropdown-item" href="#">Repeat event</a></li>
-                <li><a class="dropdown-item" href="#">Track setup</a></li>
+                <li><a class="dropdown-item" href="#" id="reminder-btn">Remind me</a></li>
                 <li><a class="dropdown-item" href="#">Lock event</a></li>
                 <li><h6 class="dropdown-header">Priority</h6></li>
                 <li>
