--- a/index.html
+++ b/index.html
@@ -174,7 +174,11 @@
               <ul class="dropdown-menu" id="drop">
                 <li><a class="dropdown-item" href="#" id="duplicate-btn">Duplicate event</a></li>
                 <li><a class="dropdown-item" href="#">Repeat event</a></li>
-                <li><a class="dropdown-item" href="#" id="reminder-btn">Remind me</a></li>
+                <li><a class="dropdown-item dropdowntoggle" for="reminders" href="#" id="reminder-btn">Remind me</a></li>
+                <ul class="dropdown-menu dropdown-bottom" id="reminders" >
+                    <li><a class="dropdown-item"><input class="form-control" type="datetime-local" id="reminder-time"/></a></li>
+                    <li class=""><button class="m-1 ml-3 btn btn-primary" id="reminder-btn-set">set reminder</button></li>
+                </ul>
                 <li><a class="dropdown-item" href="#">Lock event</a></li>
                 <li><h6 class="dropdown-header">Priority</h6></li>
                 <li>
