sections inside events are added

--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
 
 
       <div class="m-2 d-none" id="task-input">
+        <span class="section-add" id="section-btn"></span>
         <form class="input-group" id="taskform">
         <input class="form-control form-control-md" id="taskinp" placeholder="enter task name to be added to event" type="text">
         <button class="btn btn-primary btn-md" id="task-add"><i class="bi bi-plus"></i></button>
