more repeat options

--- a/index.html
+++ b/index.html
@@ -177,8 +177,8 @@
                 <ul class="dropdown-menu  dropdown" id="repeat-menu">
                   <li><a class="dropdown-item" href="#" >none</a></li>
                   <li><a class="dropdown-item" href="#" id="daily-set">daily</a></li>
-                  <li><a class="dropdown-item" href="#">weekly this day</a></li>
-                  <li><a class="dropdown-item" href="#">Monthly on this date</a></li>
+                  <li><a class="dropdown-item" href="#" id="weekly-set">weekly this day</a></li>
+                  <li><a class="dropdown-item" href="#" id="monthly-set">Monthly on this date</a></li>
                   <li><a class="dropdown-item" href="#">yearly on this date</a></li>
                   <li><a class="dropdown-item" href="#">custom</a></li>
               </ul>
