yearly added but not sure if it works

--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                   <li><a class="dropdown-item" href="#" id="daily-set">daily</a></li>
                   <li><a class="dropdown-item" href="#" id="weekly-set">weekly this day</a></li>
                   <li><a class="dropdown-item" href="#" id="monthly-set">Monthly on this date</a></li>
-                  <li><a class="dropdown-item" href="#">yearly on this date</a></li>
+                  <li><a class="dropdown-item" href="#" id="yearly-set">yearly on this date</a></li>
                   <li><a class="dropdown-item" href="#">custom</a></li>
               </ul>
                 <li><a class="dropdown-item dropdowntoggle" for="reminders" href="#" id="reminder-btn">Remind me</a></li>
