--- a/index.html
+++ b/index.html
@@ -175,8 +175,8 @@
                 <li><a class="dropdown-item" href="#" id="duplicate-btn">Duplicate event</a></li>
                 <li><a class="dropdown-item dropdowntoggle" for='repeat-menu' href="#">Repeat event</a></li>
                 <ul class="dropdown-menu  dropdown" id="repeat-menu">
-                  <li><a class="dropdown-item" href="#" >none</a></li>
-                  <li><a class="dropdown-item" href="#" id="daily-set">daily</a></li>
+                  <li><a class="dropdown-item" href="#" id="none-set" >none</a></li>
+                  <li><a class="dropdown-item active" href="#" id="daily-set">daily</a></li>
                   <li><a class="dropdown-item" href="#" id="weekly-set">weekly this day</a></li>
                   <li><a class="dropdown-item" href="#" id="monthly-set">Monthly on this date</a></li>
                   <li><a class="dropdown-item" href="#" id="yearly-set">yearly on this date</a></li>
