transation sum added

--- a/index.html
+++ b/index.html
@@ -273,6 +273,7 @@
           <div class="list-group" id="transaction-list">
 
           </div>
+          <span id="transaction-total"> </span>
 
           
           <div id="loc-edit" class="d-none">
