--- a/index.html
+++ b/index.html
@@ -269,7 +269,13 @@
  </div>
 
  <div id="section-image">
-  
+  <form id="image-form">
+  <input class="form-control" type="file"  id="image-inp" />
+  <input placeholder="Enter a description (optional)" class="form-control mb-2" id="image-desc" type="text">
+  <button type="submit" class="btn btn-block btn-primary">upload</button>
+
+  </form>
+
  </div>
                               <div class="" id="section-note">
        
