improved repeating events

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                   <li class="dropdowntoggle" for="data-more"><a class="dropdown-item"  href="#">Export Import</a></li>
                   <ul class="dropdown-menu dropdown-end " id="data-more">
                     <li><a class="dropdown-item" href='#' id='import-button'>Import data : <input type='file' accept=".ics" name="fileics"  class='form-control' id="ics-select" style="width:rem"/> </a></li>
-                  <li><a class="dropdown-item" href='#' id='export-button'>Export data</a></li>
+                  <li><a class="dropdown-item" href='#' id='export-button' download="aw-calendarexportfile.json">Export data</a></li>
                     <li><a class="dropdown-item" href="#" id="load-backup">load from backup</a></li>
                     <li><a class="dropdown-item" href="#" id="backup">backup data</a></li>
                   </ul>
