learn it hard way

--- a/index.html
+++ b/index.html
@@ -405,8 +405,13 @@
 </section>
 <section class="tab-children" tab-name="habits">
 
-  <button class=" mt-3 btn btn-success d-flex justify-content-center align-items-center  btn-md" id="cat-add">Add Tracker<i class="bi fs-5 bi-plus"></i></button>
+
   
+
+  <button class=" mt-3 btn btn-success d-flex justify-content-center align-items-center  btn-md" id="cat-add">Load Trackers<i class="bi fs-5 bi-loading"></i></button>
+  <div id="tv">
+
+  </div>
 
 </section>
 
