server architecture first trials

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -508,9 +508,8 @@
 <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/highlight.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.10.0/localforage.min.js" integrity="sha512-+BMamP0e7wn39JGL8nKAZ3yAQT2dL5oaXWr4ZYlTGkKOaoXM/Yj7c4oy50Ngz5yoUutAG17flueD4F6QpTlPng==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script  type="module" src="main.js"></script>
- <script type="module" src="moneyManger.js"></script>
- <link href="./style.css" rel="stylesheet"/>
+<script  type="module" src="./src/main.js"></script>
+<link href="./src/style.css" rel="stylesheet"/>
   
 </body>
 </html>
