manifest fixed first update to make sense

--- a/index.html
+++ b/index.html
@@ -76,9 +76,8 @@
                   <li class="dropdowntoggle" for="data-more"><a class="dropdown-item"  href="#">Export Import</a></li>
                   <ul class="dropdown-menu dropdown-end " id="data-more">
                     <li><a class="dropdown-item" href='#' id='import-button'>Import data : <input type='file' accept=".ics" name="fileics"  class='form-control' id="ics-select" style="width:rem"/> </a></li>
-                  <li><a class="dropdown-item" href='#' id='export-button' download="aw-calendarexportfile.json">Export data</a></li>
-                    <li><a class="dropdown-item" href="#" id="load-backup">load from backup</a></li>
-                    <li><a class="dropdown-item" href="#" id="backup">backup data</a></li>
+                    <li><a class="dropdown-item" href="#">Air throw</a></li>
+                    <li><a class="dropdown-item" href="#">Air fetch</a></li>
                   </ul>
 
                 </ul>
@@ -98,18 +97,7 @@
                 </button>
             </div>
             </div>
-            <section id="myday-section" class="d-none">
-            <div class="alert alert-primary d-flex align-items-center">
-              <i class="bi bi-pencil-square flex-shrink-0 me-2 fs-5"></i>
-              you are yet to complete your daily habbits please do complete them to maintain your streak 🔥
-              
-            </div>
-            <div class="progress" role="progressbar" aria-label="Success striped example" aria-valuenow="25" aria-valuemin="0" aria-valuemax="100">
-              <div class="progress-bar progress-bar-striped bg-success" style="width: 25%">25
-                %
-              </div>
-            </div>
-            </section>
+        
             <table class="table" id="calendar-table">
                 <thead>
                   <tr>
