--- a/index.html
+++ b/index.html
@@ -16,8 +16,10 @@
     integrity="sha256-20nQCchB9co0qIjJZRGuk2/Z9VM+kNiyxNV1lvTlZBo="
     crossorigin=""></script>
     <meta http-equiv="Content-Security-Policy" content="all">
-<link rel="favicon" href="'icons/iosicon.png"/>
-    <link rel="manifest" href="manifest.json">
+<link rel="favicon" href="favicon.ico"/>
+<link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon_io/favicon-32x32.png">
+<link rel="icon" type="image/png" sizes="16x16" href="icons/favicon_io/favicon-16x16.png">
+<link rel="manifest" href="/site.webmanifest">
 
 
 <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
