--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>aw-calendar</title>
-
+    <link rel="manifest" href="/site.webmanifest">
    
 
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
@@ -19,7 +19,7 @@
 <link rel="favicon" href="favicon.ico"/>
 <link rel="icon" type="image/png" sizes="32x32" href="/icons/favicon_io/favicon-32x32.png">
 <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon_io/favicon-16x16.png">
-<link rel="manifest" href="/site.webmanifest">
+
 
 
 <meta name="theme-color" content="#000000" media="(prefers-color-scheme: dark)">
@@ -498,8 +498,24 @@
 <script src="https://cdn.jsdelivr.net/gh/highlightjs/cdn-release@11.9.0/build/highlight.min.js"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/localforage/1.10.0/localforage.min.js" integrity="sha512-+BMamP0e7wn39JGL8nKAZ3yAQT2dL5oaXWr4ZYlTGkKOaoXM/Yj7c4oy50Ngz5yoUutAG17flueD4F6QpTlPng==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
-<script  type="module" src="./src/main.js"></script>
+<script  type="module" src="./src/app.js"></script>
 <link href="./src/style.css" rel="stylesheet"/>
+
+
+  <script>
+  if("serviceWorker" in navigator) {
+    window.addEventListener("load", () => {
+      navigator.serviceWorker.register("/sw.js")
+        .then((registration) => {
+          console.log("Service Worker registered with scope:", registration.scope);
+        })
+        .catch((error) => {
+          console.error("Service Worker registration failed:", error);
+        });
+    });
+  }
+</script>
+
   
 </body>
 </html>
