--- a/index.html
+++ b/index.html
@@ -400,7 +400,7 @@
 
   
 
-  <button class=" mt-3 btn btn-success d-flex justify-content-center align-items-center  btn-md" id="cat-add">Load Trackers<i class="bi fs-5 bi-loading"></i></button>
+  <button class=" mt-3 btn btn-success d-flex justify-content-center align-items-center d-none  btn-md" id="cat-add">Load Trackers<i class="bi fs-5 bi-loading"></i></button>
   <div id="tv">
 
   </div>
