--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
       l.rel='stylesheet'
       l.id='theme-shifter'
       l.href='https://cdn.jsdelivr.net/npm/bootswatch@5.3.3/dist/'+themename+'/bootstrap.min.css'
+      document.body.setAttribute('theme',themename)
       document.head.appendChild(l)
       
   
